# standardbackend

./: .gitignore  Makefile  README.md  format.json  main.py  plan_generator.py  pyproject.toml  requirements.txt  schemas.py  test_orchestra.py  zen.py
app/: agent.py  config.py  llm.py  main.py  server2.py  socks.py  test.py
app/database/: db.py  models.py
app/services/llm/: anthropic.py  base.py
examples/: deepseek.ipynb  gemini.ipynb  sam_agent.py  streaming_tool_use.ipynb  test_terminal.py  zen.py
notebooks/: hello.ipynb  multi_agent.ipynb
server/: agent_interface.py  main.py  thread_backend.py
src/standardbackend/: __init__.py  llm.py  utils.py
src/standardbackend/helpers/: agent.py  thread.py
src/standardbackend/tools/: __init__.py  base.py  cache.py  python_code_runner.py
tests/: speech.py
